--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      if (window.innerWidth < 768) { // Assuming 768px is your breakpoint for mobile
+        window.location.href = '/mobile-not-supported.html'; // Redirect to a page that informs users
+      }
+    </script>
   </body>
 </html>
