--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>bwissal</title>
     <link rel="stylesheet" href="src/index.css">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
-      if (window.innerWidth < 768) { // Assuming 768px is your breakpoint for mobile
+      if (window.innerWidth < 768) { 
         window.location.href = '/mobile-not-supported.html'; // Redirect to a page that informs users
       }
     </script>
