--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="mobile-message">
+        <h2>Visit the desktop view to see my portfolio</h2>
+      </div>
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
